samples/_failures_safe/1761565017_b5b840_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_54c6ff4c.c: In function ‘main’:
./samples/SAFE/__tmp_54c6ff4c.c:169:9: error: expected expression at end of input
  169 |         fprintf(stderr,
      |         ^~~~~~~
./samples/SAFE/__tmp_54c6ff4c.c:169:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_54c6ff4c.c:169:9: error: expected declaration or statement at end of input
